[package]
name = "parser_benchmark"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.58"
publish = false

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
getrandom = "0.2.10"
gumdrop = "0.8.1"
indicatif = { version = "0.17.5", default-features = false }
num_cpus = "1.16.0"
parser = { package = "askama_parser", version = "0.1", path = "../askama_parser" }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xoshiro = "0.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "min-size"
harness = false

[[bin]]
name = "fuzz"
harness = false
