[package]
name = "askama_testing"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
workspace = ".."
edition = "2018"
publish = false

[features]
default = ["serde-json", "markdown", "localization"]
localization = ["askama/localization"]
markdown = ["comrak", "askama/markdown"]
serde-json = ["serde_json", "askama/serde-json"]

[dependencies]
askama = { path = "../askama", version = "0.11.0-beta.1" }
comrak = { version = "0.14", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
trybuild = "1.0.55"
version_check = "0.9"

[[bench]]
name = "all"
harness = false
