[package]
name = "askama_testing"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
workspace = ".."
edition = "2021"
rust-version = "1.58"
publish = false

[features]
default = ["serde-json", "markdown"]
serde-json = ["serde_json", "askama/serde-json"]
markdown = ["comrak", "askama/markdown"]

[dependencies]
askama = { path = "../askama", version = "0.11.2" }
comrak = { version = "0.15", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.4"
trybuild = "1.0.76"
version_check = "0.9"

[[bench]]
name = "all"
harness = false
