[package]
name = "askama_testing"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>"]
workspace = ".."
edition = "2021"
rust-version = "1.65"
publish = false

[features]
default = ["serde-json"]
serde-json = ["serde_json", "askama/serde-json"]

[dependencies]
askama = { path = "../askama", version = "0.13" }
phf = { version = "0.11", features = ["macros" ]}
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
trybuild = "1.0.76"
version_check = "0.9"

[[bench]]
name = "all"
harness = false

[[bench]]
name = "normalize_identifier"
harness = false
